# .claude

./: .gitignore  CLAUDE.md  README.md  settings.json  setup.sh  statusline-command.sh
agents/: a11y-reviewer.md  ab-judge.md  api-contract-reviewer.md  api-designer.md  arch-reviewer.md  architecture-explorer.md  auditor-reviewer.md  blue-reviewer.md  code-quality-reviewer.md  code-simplicity-reviewer.md  compliance-reviewer.md  concurrency-reviewer.md  cost-monitor.md  daily-planner.md  data-flow-tracer.md  data-modeler.md  dependency-mapper.md  devops-reviewer.md  docs-reviewer.md  error-handling-reviewer.md  go-nogo-advisor.md  harness-improver.md  i18n-reviewer.md  implementation-planner.md  implementer.md  jira-spec-writer.md  learnings-researcher.md  minutes-classifier.md  observability-reviewer.md  orchestrator.md  perf-reviewer.md  prd-reviewer.md  red-reviewer.md  refactoring-advisor.md  requirement-parser.md  rule-validator.md  security-reviewer.md  technical-evaluator.md  test-reviewer.md  ui-ux-reviewer.md
commands/: adversarial-review.md  lfg.md  loop-status.md  orchestrate.md  pr-watch.md  pr.md  root-cause-tracing.md  team-run.md
config/: user.example.json
context/: agent-cli-guide.md  agent-team-routing.md  claude-customization-guide.md  custom-agents.md  loop-engineering.md  memory-file-formats.md  team-run.md  workflow-rules.md
hooks/: knowledge-index-update.sh  (+11 more)
sui-memory/: pyproject.toml
sui-memory/src/sui_memory/: __init__.py  chunker.py  cli.py  db.py  embedder.py  hook_session_start.py  hook_stop.py  knowledge.py  retriever.py
(+153 files in other folders)
